--- a/src/app/features/projects/project-detail/project-detail.component.scss
+++ b/src/app/features/projects/project-detail/project-detail.component.scss
@@ -28,6 +28,8 @@ aj-project-detail {
   }
   .article-container article picture {}
   .article-container article img.project-image {
+    width: 100%;
+    height: auto;
     position: relative !important;
     object-fit: contain;
   }
